# flaskexperiment

./: README.md  app.py  pyproject.toml  render.yaml  requirements.txt  setup.py
flaskr/: __init__.py
flaskr/auth/: models.py  views.py
flaskr/blog/: models.py  views.py
flaskr/templates/blog/: index.html
