[tool.poetry]
name = "flaskr on Render"
version = "0.1.0"
description = "a minimal blog that allows users to sign up, post, and edit. This is adapted from the official Flask application Flaskr here https://flask.palletsprojects.com/en/0.12.x/tutorial/introduction/"
authors = ["Audrey"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
dependencies = ["Flask>=2.2", "SQLAlchemy>=1.4.18", "Flask-SQLAlchemy>=3.0.1"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
